2002-06-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/FvwmPager.c (ParseOptions):
	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine):
	* FvwmButtons/parse.c (ParseConfigLine):
	fixed double quotes in *Font configuration options;
	the current solution is adding CopyStringWithQuotes()

2002-06-02  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Widgets/List.c (EvtMouseList):
	(EvtKeyList):
	Fixed selection

2002-05-31  olicha  <olivier.chapuis@free.fr>

	* FvwmIconMan/xmanager.h:
	Fixed font loading in the I18N_MB case

	* FvwmPager/x_pager.c (initialize_pager):
	Fixed some I18N_MB error messages. Removed strictly fixed code

2002-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (parse_colorset):
	fixed integer overflow in calculation of average bg colour in colour
	sets

	* FvwmEvent/FvwmEvent.1 (argument):
	corrected man page example

2002-05-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (list_new_desk):
	fixed core dump

2002-05-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	fixed a problem with sticky icons

2002-04-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmIconMan/ConfigFvwmIconMan:
	* FvwmIconMan/FvwmIconMan.1:
	* FvwmIconMan/readconfig.c (read_next_cmd):
	* FvwmTheme/FvwmTheme.1:
	implemented a new FvwmIconMan syntax that uses white spaces instead
	of asterisks, not to be different from other modules

	* FvwmIconMan/xmanager.c:
	removed ## from preprocessor's line win->##field to make gcc happy

	* FvwmConsole/FvwmConsole.c:
	* FvwmConsole/FvwmConsole.h:
	* FvwmConsole/FvwmConsoleC.c:
	* FvwmConsole/FvwmConsoleC.pl.1:
	* FvwmConsole/FvwmConsoleC.pl.in:
	* FvwmConsole/getline.c:
	use $FVWM_USERDIR not $HOME for FvwmConsole history and socket files,
	make these file names more readable, increase history from 50 to 100

2002-04-05  Mikhael Goikhman  <migo@homemail.com>

	* FvwmTheme/FvwmTheme.1:
	restored a correct example
