@@ -129,4 +129,6 @@ extern void WarpTaskBar(int x, Bool force);
 extern void PurgeConfigEvents(void);
 extern void redraw_buttons(void);
 
+extern void CopyStringWithQuotes(char **dest, const char *src);
+
 #endif
